changed some color stylings, sticky footer, added placeholder images for portfolio items

--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
         <div class="col s10">
             <nav>
                 <div class="nav-wrapper">
-                <a href="#" class="brand-logo">Michaela Banczak</a>
+                <a href="index.html" class="brand-logo">Michaela Banczak</a>
                 <ul id="nav-mobile" class="right hide-on-med-and-down">
                 <li><a href="index.html">About Me</a></li>
                 <li><a href="contact.html">Contact</a></li>
