--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
 </head>
 
 <body>
+    <div class="content">
     <div class="row">
         <div class="col s1"></div>
         <div class="col s10">
             <nav>
                 <div class="nav-wrapper">
-                <a href="#" class="brand-logo">Michaela Banczak</a>
+                <a href="index.html" class="brand-logo">Michaela Banczak</a>
                 <ul id="nav-mobile" class="right hide-on-med-and-down">
                 <li><a href="index.html">About Me</a></li>
                 <li><a href="contact.html">Contact</a></li>
@@ -49,6 +50,7 @@
     <div class="col s1"></div>
     </div>
 
+    </div>
 
         <div class="row">
             <div class="col s1"></div>
