added social media links

--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
+    <script src="https://kit.fontawesome.com/bd5124cceb.js"></script>
+
 </head>
 
 <body>
@@ -33,6 +35,7 @@
         <div class="col s10">
         <div class="box">
         <h1>Let's get in touch!</h1>
+            
             <form id="contact-form">
                 <ul>
                 <li>
