--- a/portfolio.html
+++ b/portfolio.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
+    <script src="https://kit.fontawesome.com/bd5124cceb.js"></script>
+
 </head>
 
 <body>
@@ -42,7 +44,7 @@
                 <div class="port-item">
                     <img src="https://via.placeholder.com/150">
     
-                    <h3>Crystal Collector</h3>
+                    <h3><a href="https://github.com/michaelabee/Cat-Trivia"></a> Crystal Collector</h3>
                 </div>
 
                 <div class="port-item">
