began making images clickable, moved linkedin links around

--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,14 @@
         <div class="col s10">
         <div class="box">
         <h1>Let's get in touch!</h1>
-            
+
+        <div class="social-links">
+            <a class="waves-effect waves-light btn" href="https://www.linkedin.com/in/michaela-banczak-00999/" target="_blank"><i class="fab fa-linkedin"></i> linkedin</a>
+            <a class="waves-effect waves-light btn" href="https://github.com/michaelabee" target="_blank"><i class="fab fa-github-square"></i> GitHub</a>    
+        </div>
+
+        <br>
+            <div id="contact">
             <form id="contact-form">
                 <ul>
                 <li>
@@ -54,6 +61,7 @@
                 <a class="waves-effect waves-light btn">Submit</a>
                 
             </form>
+            </div>
         </div>
         </div>
     <div class="col s1"></div>
