--- a/portfolio.html
+++ b/portfolio.html
@@ -36,15 +36,15 @@
             <div class="container" class="box">
 
                 <div class="port-item">
-                    <img src="https://via.placeholder.com/150">
-
-                    <h3>Ellipse</h3>
+                   <h1>Ellipse</h1>
+                    <p>Github Repository:<a href="https://github.com/michaelabee/Cool-Space-Pix"> https://github.com/michaelabee/Cool-Space-Pix</a></p>
+                    <a href="https://michaelabee.github.io/Cool-Space-Pix/"> <img src="assets/images/ellipse.jpg"> </a>
                 </div>
 
                 <div class="port-item">
-                    <img src="https://via.placeholder.com/150">
-    
-                    <h3><a href="https://github.com/michaelabee/Cat-Trivia"></a> Crystal Collector</h3>
+                    <h1>Crystal Collector</h1>
+                    <p>Github Repository:<a href="https://github.com/michaelabee/Crystal-Collector"> https://github.com/michaelabee/Crystal-Collector</a></p>
+                    <a href="https://michaelabee.github.io/Cool-Space-Pix/"> <img src="assets/images/ellipse.jpg"> </a>
                 </div>
 
                 <div class="port-item">
@@ -64,6 +64,16 @@
     <div class="col s1"></div>
     </div>
 
+    <div class="row">
+            <div class="col s1"></div>
+            <div class="col s10">
+                <div id="social-links-portfolio">
+                    <a class="waves-effect waves-light btn" href="https://www.linkedin.com/in/michaela-banczak-00999/" target="_blank"><i class="fab fa-linkedin"></i> linkedin</a>
+                    <a class="waves-effect waves-light btn" href="https://github.com/michaelabee" target="_blank"><i class="fab fa-github-square"></i> GitHub</a>    
+                </div>
+            </div>
+            <div class="col s1"></div>
+    </div>  
 
     <div class="row">
         <div class="col s1"></div>
