--- a/portfolio.html
+++ b/portfolio.html
@@ -50,25 +50,25 @@
 
                 <div class="port-item">
                    <h1>Ellipse</h1>
-                    <p>Github Repository:<a href="https://github.com/michaelabee/Cool-Space-Pix"> https://github.com/michaelabee/Cool-Space-Pix</a></p>
+                    <p>Github Repository:<br><a href="https://github.com/michaelabee/Cool-Space-Pix"> https://github.com/michaelabee/Cool-Space-Pix</a></p>
                     <a href="https://michaelabee.github.io/Cool-Space-Pix/"> <img src="assets/images/ellipse.jpg"> </a>
                 </div>
 
                 <div class="port-item">
                     <h1>Crystal Collector</h1>
-                    <p>Github Repository:<a href="https://github.com/michaelabee/Crystal-Collector"> https://github.com/michaelabee/Crystal-Collector</a></p>
+                    <p>Github Repository:<br><a href="https://github.com/michaelabee/Crystal-Collector"> https://github.com/michaelabee/Crystal-Collector</a></p>
                     <a href="https://michaelabee.github.io/Crystal-Collector/"> <img src="assets/images/crystalcollector.png"> </a>
                 </div>
 
                 <div class="port-item">
                     <h1>Gif Searcher</h1>
-                    <p>Github Repository:<a href="https://github.com/michaelabee/GIF-Searcher"> https://github.com/michaelabee/GIF-Searcher</a></p>
+                    <p>Github Repository:<br><a href="https://github.com/michaelabee/GIF-Searcher"> https://github.com/michaelabee/GIF-Searcher</a></p>
                     <a href="https://github.com/michaelabee/GIF-Searcher"> <img src="assets/images/gifsearch.png"> </a>
                 </div>
 
                 <div class="port-item">
                     <h1>Cat Trivia</h1>
-                    <p>Github Repository:<a href="https://github.com/michaelabee/Cat-Trivia"> https://github.com/michaelabee/Cat-Trivia</a></p>
+                    <p>Github Repository:<br><a href="https://github.com/michaelabee/Cat-Trivia"> https://github.com/michaelabee/Cat-Trivia</a></p>
                     <a href="https://michaelabee.github.io/Cat-Trivia/"> <img src="assets/images/cattrivia.png"> </a>
                 </div>
 
