added more to about me section

--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
                 St. Paul, MN. I enjoy creating dynamic, user-friendly interfaces using CSS, Javascript, Bootstrap, and Materialize. I'm 
                 endlessly amazed at how important each element of a webpage is to the feeling it elicits from the user. I'm currently polishing up my Node.js skills and looking forward to learning React soon. 
                 <br>
+                I'm looking for a Junior Web Development position in the Twin Cities, but am open to relocation within the next year. I 
+                want to be working under a mentor and to continue to develop my coding skills, espcially Javascript. 
+                <br>
                 When I'm not designing websites I spend my time traveling, hiking and camping, or playing violin and enjoying live music.
                     
                 </p>
