--- a/portfolio.html
+++ b/portfolio.html
@@ -55,6 +55,13 @@
                 </div>
 
                 <div class="port-item">
+                    <h1>LIRI Node.js Application</h1>
+                    <p>Github Repository:<br><a href="https://github.com/michaelabee/LIRI-bot"> https://github.com/michaelabee/LIRI-bot</a></p>
+                    <img src="assets/images/LIRI.gif"> </a>
+                </div>
+
+
+                <div class="port-item">
                     <h1>Crystal Collector</h1>
                     <p>Github Repository:<br><a href="https://github.com/michaelabee/Crystal-Collector"> https://github.com/michaelabee/Crystal-Collector</a></p>
                     <a href="https://michaelabee.github.io/Crystal-Collector/"> <img src="assets/images/crystalcollector.png"> </a>
