updated about section and linked project 2

--- a/portfolio.html
+++ b/portfolio.html
@@ -55,6 +55,12 @@
                 </div>
 
                 <div class="port-item">
+                    <h1>Drink Up</h1>
+                     <p>Github Repository:<br><a href="https://github.com/michaelabee/Project-2"> https://github.com/michaelabee/Project-2</a></p>
+                     <a href="https://green-sea-turtle-group-project.herokuapp.com"> <img src="assets/images/drinkapp.png"> </a>
+                 </div>
+
+                <div class="port-item">
                     <h1>Eat-the-Burger</h1>
                      <p>Github Repository:<br><a href="https://github.com/michaelabee/burger"> https://github.com/michaelabee/burger</a></p>
                      <a href="https://blooming-gorge-16714.herokuapp.com/"> <img src="assets/images/burger.png"> </a>
