contact form functionality

--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
 
         <br>
             <div id="contact">
-            <form id="contact-form">
+            <form action="https://formspree.io/email@domain.tld" method="POST" id="contact-form">
                 <ul>
                 <li>
                     <label class="labels" for="name">Name</label>
@@ -58,7 +58,7 @@
                     <textarea id="message" name="message" required="required"></textarea>
                 </li>
                 </ul>
-                <a class="waves-effect waves-light btn">Submit</a>
+                <button type="submit" class="waves-effect waves-light btn">Submit</button>
                 
             </form>
             </div>
