--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
 
         <br>
             <div id="contact">
-            <form action="https://formspree.io/email@domain.tld" method="POST" id="contact-form">
+            <form action="https://formspree.io/m.a.banczak@gmail.com" method="POST" id="contact-form">
                 <ul>
                 <li>
                     <label class="labels" for="name">Name</label>
