--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
                 <p>
                 <img id="profile-pic" src="assets/images/SquareTeton.jpeg">
                 I'm a current University of Minnesota Full Stack Web Development Boot Camp student and web developer based in 
-                St. Paul, MN. I enjoy creating dynamic, user-friendly interfaces using CSS, Javascript, Bootstrap, and Materialize. I'm 
-                endlessly amazed at how important each element of a webpage is to the feeling it elicits from the user. I'm currently polishing 
-                up my Node.js, MySQL, and Mongo skills and looking forward to learning React soon. 
+                St. Paul, MN. I enjoy creating dynamic, user-friendly interfaces using Javascript and React. I'm 
+                endlessly amazed at how important each element of a webpage is to the feeling it elicits from the user. I have developed MERN stack
+                applications on my own and in a team environment, and often found myself in a leadership role within those groups.
                 <br>
                 <br>
-                I am searching for a Junior Web Development position in the Twin Cities, but am also open to relocation within the next year. I 
+                I am searching for a Junior Web Development position working with React in the Twin Cities, but am also open to relocation within the next year. I 
                 want to be working under a mentor and to continue to develop my front end web development skills.
                 <br>
                 <br>
