--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 
                         
                 <p>
-                <img id="profile-pic" src="assets/images/SquareTeton.jpeg">
+                <img id="profile-pic" src="assets/images/portfolio.jpg">
                 I'm a current University of Minnesota Full Stack Web Development Boot Camp student and web developer based in 
                 St. Paul, MN. I enjoy creating dynamic, user-friendly interfaces using Javascript and React. I'm 
                 endlessly amazed at how important each element of a webpage is to the feeling it elicits from the user. I have developed MERN stack
