--- a/portfolio.html
+++ b/portfolio.html
@@ -36,7 +36,7 @@
                 <div id="social-links-portfolio">
                     <a class="waves-effect waves-light btn" href="https://www.linkedin.com/in/michaela-banczak-00999/" target="_blank"><i class="fab fa-linkedin"></i> linkedin</a>
                     <a class="waves-effect waves-light btn" href="https://github.com/michaelabee" target="_blank"><i class="fab fa-github-square"></i> GitHub</a>    
-                    <a class="waves-effect waves-light btn" href="assets/files/M Resume June 2019.pdf" target="_blank"><i class="fas fa-file"></i> Resume</a>    
+                    <a class="waves-effect waves-light btn" href="assets/files/MBanczakResume.pdf" target="_blank"><i class="fas fa-file"></i> Resume</a>    
                     
                 </div>
             </div>
@@ -53,6 +53,12 @@
                     <p>Github Repository:<br><a href="https://github.com/michaelabee/Cool-Space-Pix"> https://github.com/michaelabee/Cool-Space-Pix</a></p>
                     <a href="https://michaelabee.github.io/Cool-Space-Pix/"> <img src="assets/images/ellipse.jpg"> </a>
                 </div>
+
+                <div class="port-item">
+                    <h1>Plantly</h1>
+                     <p>Github Repository:<br><a href="https://github.com/michaelabee/plantly"> https://github.com/michaelabee/plantly</a></p>
+                     <a href="https://plantlyvirtualgarden.herokuapp.com/myGarden"> <img src="assets/images/plantly.png"> </a>
+                 </div>
 
                 <div class="port-item">
                     <h1>Memory Garden</h1>
@@ -76,25 +82,6 @@
                     <h1>LIRI Node.js Application</h1>
                     <p>Github Repository:<br><a href="https://github.com/michaelabee/LIRI-bot"> https://github.com/michaelabee/LIRI-bot</a></p>
                     <img src="assets/images/LIRI.gif"> </a>
-                </div>
-
-
-                <div class="port-item">
-                    <h1>Crystal Collector</h1>
-                    <p>Github Repository:<br><a href="https://github.com/michaelabee/Crystal-Collector"> https://github.com/michaelabee/Crystal-Collector</a></p>
-                    <a href="https://michaelabee.github.io/Crystal-Collector/"> <img src="assets/images/crystalcollector.png"> </a>
-                </div>
-
-                <div class="port-item">
-                    <h1>Gif Searcher</h1>
-                    <p>Github Repository:<br><a href="https://github.com/michaelabee/GIF-Searcher"> https://github.com/michaelabee/GIF-Searcher</a></p>
-                    <a href="https://github.com/michaelabee/GIF-Searcher"> <img src="assets/images/gifsearch.png"> </a>
-                </div>
-
-                <div class="port-item">
-                    <h1>Cat Trivia</h1>
-                    <p>Github Repository:<br><a href="https://github.com/michaelabee/Cat-Trivia"> https://github.com/michaelabee/Cat-Trivia</a></p>
-                    <a href="https://michaelabee.github.io/Cat-Trivia/"> <img src="assets/images/cattrivia.png"> </a>
                 </div>
 
             </div>
