--- a/index.html
+++ b/index.html
@@ -40,10 +40,12 @@
                         
                 <p>
                 <img id="profile-pic" src="assets/images/portfolio.jpg">
-                I'm a current University of Minnesota Full Stack Web Development Boot Camp student and web developer based in 
-                St. Paul, MN. I enjoy creating dynamic, user-friendly interfaces using Javascript and React. I'm 
-                endlessly amazed at how important each element of a webpage is to the feeling it elicits from the user. I have developed MERN stack
-                applications on my own and in a team environment, and often found myself in a leadership role within those groups.
+                I'm a graduate of the University of Minnesota Full Stack Web Development Boot Camp and full stack web 
+                developer based in St. Paul, MN. I enjoy creating dynamic, user-friendly interfaces using Javascript 
+                and React. I also regularly work with Node, MongoDB and Express. I'm endlessly amazed at how important 
+                each element of a webpage is to the feeling it elicits from the user. I have developed MERN stack 
+                applications on my own and in a team environment, and often found myself in a leadership role within 
+                those groups.
                 <br>
                 <br>
                 I am searching for a Junior Web Development position working with React in the Twin Cities, but am also open to relocation within the next year. I 
