--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 
                         
                 <p>
-                <img id="profile-pic" src="assets/images/portfolio.jpg">
+                <img id="profile-pic" src="assets/images/profileSquare.jpg">
                 I'm a graduate of the University of Minnesota Full Stack Web Development Boot Camp and full stack web 
                 developer based in St. Paul, MN. I enjoy creating dynamic, user-friendly interfaces using Javascript 
                 and React. I also regularly work with Node, MongoDB and Express. I'm endlessly amazed at how important 
